@@ -176,6 +176,7 @@ needed for a long time after calling xchat_list_str. The types of lists and fiel
 "dcc" - list of DCC file transfers. Fields:
 <blockquote> <table border=1>
 <tr bgcolor="#dddddd"><td>Name</td><td>Description</td><td>Type</td></tr>
+<tr><td>address32</td><td>Address of the remote user (ipv4 address)</td><td>int</td></tr>
 <tr><td>cps</td><td>Bytes per second (speed)</td><td>int</td></tr>
 <tr><td>destfile</td><td>Destination full pathname</td><td>string</td></tr>
 <tr><td>file</td><td>File name</td><td>string</td></tr>
