@@ -24,6 +24,7 @@
  - Send /LIST args on galaxynet.
  - Added settings to change inputbox and userlist styles to the same
    as the main text area.
+ - Don't allow the Perl plugin to be loaded twice (Ian Kumlien).
  - 
  - 
 
